# MyGrpc

./: CMakeLists.txt  README.md  gdata_client.cc  gdata_server.cc
protos/: .evans.toml  receiver.proto
